--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <div class="section__container header__container">
         <p><span>Hello</span> I'm</p>
-        <h1>Konika</h1>
+        <h1>Kohinur</h1>
         <h2 class="section__title">Digital Marketing <span>Expert.</span></h2>
         <p>
           Welcome to my digital marketing portfolio! I'm Fahim, a results-driven and creative digital marketer with a passion for crafting compelling online experiences. I specialize in building data-backed strategies that drive traffic, boost engagement, and convert visitors into loyal customers. From social media campaigns to SEO-optimized content and email marketing funnels, I've helped brands grow and thrive in the digital space.
