--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <header>
       <div class="section__container header__container">
         <p><span>Hello</span> I'm</p>
-        <h1>Kohinur</h1>
-        <h2 class="section__title">Digital Marketing <span>Expert.</span></h2>
+        <h1>MST Kohinur Akter</h1>
+        <h2 class="section__title">Digital Marketing<span> Expert.</span></h2>
         <p>
-          Welcome to my digital marketing portfolio! I'm Fahim, a results-driven and creative digital marketer with a passion for crafting compelling online experiences. I specialize in building data-backed strategies that drive traffic, boost engagement, and convert visitors into loyal customers. From social media campaigns to SEO-optimized content and email marketing funnels, I've helped brands grow and thrive in the digital space.
+          Welcome to my digital marketing portfolio!
+          I'm Kohinur Akter, a results-driven and creative digital marketer with a passion for crafting impactful online experiences. I specialize in designing data-backed strategies that boost brand visibility, drive engagement, and convert traffic into loyal customers. From social media campaigns to SEO-optimized content and performance marketing, I’ve worked on diverse projects across industries — helping businesses grow in the digital landscape.
         </p>
         <div class="action__btns">
           <button class="btn">Say Hello</button>
@@ -37,20 +38,13 @@
     <section class="about">
       <div class="section__container about__container">
         <div class="about__image">
-          <img src="assets/WhatsApp_Image_2025-04-22_at_11.05.38-removebg-preview.png" alt="about" />
+          <img src="assets/whatsapp.png" alt="about" />
         </div>
-        <div class="about__content">
+        <div class="about__content">Digital Marketing Expert
           <h2 class="section__title">About <span>Me</span></h2>
-          <p class="section__subtitle">Digital Marketing Expert!</p>
+          <p class="section__subtitle">!</p>
           <p class="about__details">
-            As a UI/UX designer, I specialize in creating user interfaces and
-            experiences for digital products. I have extensive experience
-            working with product managers, developers, and other stakeholders to
-            gather requirements, create wireframes and prototypes, and conduct
-            user testing to ensure that the final product meets the needs of the
-            users. Throughout my career, I have achieved several milestones,
-            including designing successful digital products that have received
-            positive feedback from users and stakeholders.
+            As a digital marketer, I specialize in crafting engaging and effective online experiences that drive measurable results. I work closely with product managers, developers, and other stakeholders to ensure that every digital campaign is aligned with business goals. From audience research and strategy development to content creation and campaign optimization, I ensure that every touchpoint is impactful and user-centric. Throughout my career, I’ve delivered several successful marketing campaigns that have garnered positive feedback and substantial growth for brands.
           </p>
           <button class="btn">More About</button>
         </div>
@@ -64,10 +58,9 @@
         <div class="service__grid">
           <div class="service__card">
             <i class="ri-smartphone-line"></i>
-            <h4>Web Design</h4>
+            <h4>SEO</h4>
             <p>
-              We are dedicated to providing high-quality web design services
-              that are tailored to meet the specific needs of our clients.
+              We specialize in custom lead generation websites that drive conversions and boost your business. Our team creates high-quality, SEO-friendly websites tailored to meet your unique goals, helping you capture more leads and grow your customer base.
             </p>
             <a href="#" class="read__more">Read more...</a>
           </div>
@@ -82,11 +75,10 @@
           </div>
           <div class="service__card">
             <i class="ri-edit-2-line"></i>
-            <h4>Creative Design</h4>
+            <h4>Lead Genaration</h4>
             <p>
-              Our approach is collaborative, and we encourage your feedback
-              throughout the design process to ensure that we are meeting your
-              expectations.
+
+              Our approach to lead generation website development is highly collaborative. We welcome your feedback at every stage to ensure the final result aligns with your goals and effectively attracts and converts leads
             </p>
             <a href="#" class="read__more">Read more...</a>
           </div>
@@ -134,7 +126,7 @@
             </p>
             <p>Digital Agency Network, 20</p>
             <p>Eastbourne Terrace, London W2 6LG,</p>
-            <p>Bangladesh</p>
+            <p>United Kingdom</p>
           </div>
           <div class="social__icons">
             <a href="#" class="icon"><i class="ri-facebook-fill"></i></a>
